[tool.poetry]
name = "gda"
version = "0.1.0"
description = "Data Science Studies Project"
authors = ["Peter Ivanov <peto.ivanov@pm.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.1.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
tensorflow = "^2.18.0"
opencv-python = "^4.10.0.84"
mtcnn = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
